# rust-mnist

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
benches/: dataset_iter.rs  dataset_load.rs  load_default.rs
examples/: perceptron.rs
src/: lib.rs
