[package]
name = "rust-mnist"
version = "0.1.0"
authors = ["BusyBoredom <cwilkin@protonmail.com>"]
edition = "2018"
description = "A simple MNIST parser/loader written in rust."
repository = "https://github.com/busyboredom/rust-mnist"
readme = "README.md"
keywords = ["MNIST", "idx"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "~0.4"
rand = "~0.3"
