[package]
name = "rust-mnist"
version = "0.1.3"
authors = ["BusyBoredom <cwilkin@protonmail.com>"]
edition = "2018"
description = "A simple MNIST parser/loader written in rust."
repository = "https://github.com/busyboredom/rust-mnist"
readme = "README.md"
keywords = ["MNIST", "idx"]
license = "MIT"

[dependencies]
log = "0.4"
rand = "0.3"

[dev-dependencies]
criterion = "0"

[[bench]]
name = "dataset_load"
harness = false
